<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Space SDK Test</string>
    <!--    TODO add your keys-->
    <string name="space_client_key">space_client_key</string>
    <string name="space_secret_key">space_secret_key</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="allow_requests_to_speak">Allow requests to speak</string>
    <string name="enable_chat">Enable Chat</string>
    <string name="enable_reactions">Enable Reactions</string>
    <string name="users_join_as_speaker">Users join as Speaker</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="room_id">Room ID</string>
    <string-array name="roles">
        <item>Co-Host</item>
        <item>Speaker</item>
        <item>Audience</item>
    </string-array>
</resources>